hphp/test/quick/hh_typehint3.php.expectf

Fatal error: Argument 1 to foo() must be of type ?xhp_url, array given in %s/test/quick/hh_typehint3.php on line 7
